<resources>
    <string name="app_name">Clarity</string>
    <string name="title_text">Welcome to Clarity</string>
    <string name="get_started_button_text">Get Started</string>
    <string name="choose_options_title">Greetings!</string>
    <string name="breathing_button_text">Breathing Exercise</string>
    <string name="quotes_button_text">Handling emotions</string>
    <string name="madlib_button_text">Default String</string>
    <string name="inhale_text">Inhale</string>
    <string name="exhale_text">Exhale</string>
    <string name="breathing_popup_text1">The following animation was designed to help you relax.</string>
    <string name="breathing_popup_text2">Inhale with your nose and exhale with your mouth.</string>
    <string name="timer_count">0</string>
    <string name="quotes_page_instructions">Pick out an emotion</string>
    <string name="quotes_page_instructions2">We will provide you with tips and quotes to help you through your day.</string>
    <string name="got_it_popup">Got It</string>
    <string name="happy_face_text">Happy</string>
    <string name="scared_face_text">Scared</string>
    <string name="angry_face_text">Angry</string>
    <string name="nervous_face_text">Nervous</string>
    <string name="sad_face_text">Sad</string>
    <string name="game_question">Pick out an emotion</string>
    <string name="get_quote_button">Generate Quote</string>
    <string-array name="happy_quote_list">
        <item>The secret to happiness is freedom. And the secret to freedom is courage</item>
        <item>Action may not always Bring happiness, But there is no happiness without action.</item>
        <item>Every man is happy until happiness is suddenly a goal.</item>
        <item>We don\'t develop courage By Being happy every day. We develop it By surviving difficult times and challenging adversity.</item>
        <item>The most important thing is to enjoy your life - to Be happy - it\'s all that matters.</item>
        <item>Being happy never goes out of style.</item>
        <item>Sometimes your joy is the source of your smile, But sometimes your smile can Be the source of your joy.</item>
        <item>Happy people plan actions, they don\’t plan results.</item>
        <item>Very little is needed to make a happy life; it is all within yourself, in your way of thinking.</item>
        <item>The foolish man seeks happiness in the distance, the wise grows it under his feet.</item>
        <item>No act of kindness, no matter how small, is ever wasted.</item>
        <item>No one can make you feel inferior without your consent.</item>
        <item>Thousands of candles can Be lighted from a single candle, and the life of the candle will not Be shortened. Happiness never decreases By Being shared
        -Buddha</item>
        <item>To Be happy, we must not Be too concerned with others.
        -AlBert Camus</item>
        <item>If you want happiness for an hour — take a nap.
        If you want happiness for a day — go fishing.
        If you want happiness for a year — inherit a fortune.
        If you want happiness for a lifetime — help someone else.</item>
        <item>It isn’t what you have, or who you are, or where you are, or what you are doing that makes you happy or unhappy. It is what you think aBout.
        -Dale Carnegie</item>
        <item>We tend to forget that happiness doesn’t come as a result of getting something we don’t have, But rather of recognizing and appreciating what we do have.
        -Frederick Keonig</item>
        <item>Everyone wants to live on top of the mountain, But all the happiness and growth occurs while you’re climBing it.
        -Andy Rooney</item>
        <item>The first recipe for happiness is: avoid too lengthy meditation on the past.
        -Andrew Maurois</item>
        <item>Optimism is a happiness magnet. If you stay positive, good things and good people will Be drawn to you.
        -Mary Lou Retton</item>
    </string-array>
    <string-array name="scared_quote_list">
        <item>The scariest thing is setting your goals too low and meeting them.
        -Georges Saint Pierre</item>
        <item>Many a false step was made By standing still.</item>
        <item>Feel fear and do it anyway.</item>
        <item>Courage is Being scared to death... and saddling up anyway.</item>
        <item>Only those who will risk going too far can possiBly find out how far one can go.</item>
        <item>Don\'t fear failure so much that you refuse to try new things. The saddest summary of a life contains three descriptions: could have, might have, and should have.</item>
        <item>Whether you think you can or you think you can\’t, you\’re right.
        -Henry Ford</item>
        <item>Let us not pray to Be sheltered from dangers But to Be fearless when facing them.</item>
        <item>I\'m fearless, I don\'t complain. Even when horriBle things happen to me, I go on.</item>
        <item>I feel myself Becoming the fearless person I have dreamt of Being. Have I arrived? No. But I\'m constantly evolving and challenging myself to Be unafraid to make mistakes.</item>
        <item>Fate loves the fearless.
        -James Lowell</item>
        <item>I am totally fearless! Well, of course, I\'m not totally fearless. I worry constantly and oBsess over things, But I just don\'t let fear stand in the way of doing something that I really want to do.
        -Tom Ford</item>
        <item>I\'m limitless, spontaneous and fearless. I can take direction and also give it. And I don\'t dwell on celeBrity.
        -Ester Dean</item>
        <item>Once you Become fearless life Becomes limitless</item>
        <item>Where there is no fear, there is no courage.</item>

    </string-array>
    <string-array name="angry_quote_list">
        <item>For every minute you remain angry, you give up sixty seconds of peace of mind.
        -Ralph Waldo Emerson</item>
        <item>When angry count to ten Before you speak. If very angry, count to one hundred.
            -Thomas Jefferson</item>
        <item>I am a danger to myself if I get angry.
            -Oriana Fallaci</item>
        <item>When anger rises, think of the consequences.
        -Confucius</item>
        <item>It\’s okay to Be angry, it\’s never okay to Be cruel.</item>
        <item>When angry count to ten Before you speak. If very angry, count to one hundred.</item>
        <item>The strongest people are not those who show strength in front of us, But those who win Battles we know nothing aBout.</item>
        <item>Everytime you are aBle to find some humor in a difficult situation, you win.</item>
        <item>Holding on to anger is like grasping a hot coal with the intent of throwing it at someone else; you are the one who gets Burned.</item>
        <item>Never respond to an angry person with a fiery comeBack, even if he deserves it...Don\'t allow his anger to Become your anger.</item>
        <item>Speak when you are angry and you will make the Best speech you will ever regret.</item>
        <item>Do not let your anger lead to hatred, as you will hurt yourself more than you would the other.</item>
        <item>Nothing repels people like an angry face</item>
        <item>When your emotions are in motion, take a Break and ponder!
        -Ernest YeBoah</item>
        <item>Healthy people know not to gorge on anger. At the end of the day, they walk away. They choose to end it. And it\’s an easier choice the next time.</item>
        <item>Impatience is the Breeding ground of anger.</item>

    </string-array>
    <string-array name="nervous_quote_list">
        <item>Nothing fails like success</item>
        <item>If you can dream it, you can do it.
        -Walt Disney</item>
        <item>Being nervous isn\'t Bad, it just means something important is happening.
        -Anonymous</item>
        <item>If you don\'t try, there’s no opportunity to succeed.
        -Katie Lime</item>
        <item>Life Begins at the end of your comfort zone.
        -Anonymous</item>
        <item>Don\'t let your mind Bully your Body into Believing it must carry the Burden of its worries.
        -Astrid Alauda</item>
        <item>Every time you are tempted to react in the same old way, ask if you want to Be a prisoner of the past or a pioneer of the future.
        -Deepak Chopra</item>
        <item>Smile, Breathe, and go slowly.
        -Thich Nhat Hanh</item>
        <item>Let yourself Be open and life will Be easier. A spoon of salt in a glass of water makes the water undrinkaBle. A spoon of salt in a lake is almost unnoticed
        Buddha</item>
        <item>You cannot make yourself feel something you do not feel, But you can make yourself do right in spite of your feelings.
        Pearl S. Buck</item>
        <item>Anything that gets your Blood racing is proBaBly worth doing.
        Hunter S. Thompson</item>
        <item>If you\’re not nervous aBout one or two decisions every day, you proBaBly aren\’t trying hard enough
        Tim O\’Shaughnessy</item>
        <item>All our dreams can come true, if we have the courage to pursue them
        Walt Disney</item>
        <item>I know for sure that what we dwell on is what we Become
        Oprah Winfrey</item>
        <item>Twenty years from now you will Be more disappointed By the things that you didn’t do than By the ones you did do.
        Mark Twain</item>
        <item>In order to succeed, your desire for success should Be greater than your fear of failure.
        Bill CosBy</item>
        <item>Smile at strangers and you just might change a life.
        Steve MaraBoli</item>


    </string-array>
</resources>