<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_options_framelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.paul.independenceproject.OptionsFragment"
    android:background="@drawable/boat_wallpaper">


        <RelativeLayout
            android:id="@+id/options_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/choose_options_top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/choose_options_title"
                android:gravity="center_horizontal"
                android:textSize="55sp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <info.hoang8f.widget.FButton
                android:id="@+id/breathing_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/breathing_button_text"
                android:textSize="25sp"
                android:textColor="@color/white"
                fbutton:buttonColor="@color/FireBrick"
                fbutton:shadowColor="@color/white"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:gravity="center"
                android:layout_marginTop="130dp"
                android:layout_alignTop="@+id/choose_options_top"
                android:layout_alignLeft="@+id/empathy_button"
                android:layout_alignStart="@+id/empathy_button" />

            <info.hoang8f.widget.FButton
                android:id="@+id/default_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/madlib_button_text"
                android:textSize="25sp"
                android:textColor="@color/white"
                fbutton:buttonColor="@color/FireBrick"
                fbutton:shadowColor="@color/white"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:layout_below="@+id/breathing_button"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true"
                android:visibility="gone"/>

            <info.hoang8f.widget.FButton
                android:id="@+id/empathy_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:text="@string/quotes_button_text"
                android:textSize="25sp"
                android:textColor="@color/white"
                fbutton:buttonColor="@color/FireBrick"
                fbutton:shadowColor="@color/white"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="5dp"
                fbutton:cornerRadius="5dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:layout_marginTop="52dp"
                android:layout_below="@+id/breathing_button"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    <RelativeLayout
        android:id="@+id/popup_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@drawable/color_bg">

        <!--change visiblity-->

        <TextView
            android:id="@+id/popup_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quotes_page_instructions"
            android:gravity="center_horizontal"
            android:layout_margin="30dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/popup_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quotes_page_instructions2"
            android:layout_below="@id/popup_text1"
            android:layout_margin="30dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"/>

        <info.hoang8f.widget.FButton
            android:id="@+id/gotit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/got_it_popup"
            android:background="@drawable/rounded_button"
            android:textSize="20sp"
            android:textColor="@color/white"
            fbutton:buttonColor="@color/Gray"
            fbutton:shadowColor="@color/DarkGray"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="5dp"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"/>
    </RelativeLayout>


    </FrameLayout>
